Added API query

--- a/app/views/author.html
+++ b/app/views/author.html
@@ -1,5 +1,4 @@
-<h1>{{author.name}}'s Blog</h1>
-
+<div class="author-header">{{name}}'s Blog</div>
 <div class="author-article-container">
     <div ng-repeat="item in articles">
         <article-info article="item" />
