--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -127,3 +127,16 @@ body {
         text-align: center;
         font-size: 60px;
 }
+
+.author-header {
+    font-family: Futura;
+    font-size: 48px;
+    text-align: center;
+        background: gainsboro;
+        padding-bottom: 10%;
+        padding-top: 10%;
+}
+
+.user-name {
+    @extend .author-header
+}
